<resources>
    <string name="app_name">Real Talk</string>
    <string name="facebook_appId">1495270677465133</string>
    <string name="tlpSharedPreference">tlpSharedPreference</string>
    <!--Shared preference file name-->

    <string name="serverURL">http://tlpserver.herokuapp.com/</string>
    <string name="talkDetailsWebConnection">http://www.realtalk.careers/web#/tkId</string>
    <string name="connectionError">No internet connectivity detected. Please reconnect and try again</string>

    <!--First On Boarding Page-->
    <string name="onBoardingAdvice">REAL PEOPLE GIVING REAL CAREER ADVICE.</string>
    <string name="onBoardingNextSteps">EXPLORE OVER 200+ CAREERS AND HUNDREDS OF RESOURCES TO PLAN YOUR NEXT STEPS.</string>
    <string name="btnGetStarted">GET STARTED</string>

    <!--Second On Boarding Page-->
    <string name="txtSkip">SKIP</string>
    <string name="txtSecondOnBoardingTitle">WHAT STATEMENT BEST DESCRIBES YOU?</string>

    <!--Home Page-->
    <string name="mostLiked">Most Liked</string>
    <string name="mostBookmarked">Most Bookmarked</string>
    <string name="realtalkTab">Real Talk</string>
    <string name="nextStepTab">Resources</string>
    <string name="verticleBar">|</string>
    <string name="searchBarPlaceHolder">Search for careers…</string>
    <string name="noSearchFound">Oops, no Real Talk found. We’re working hard on adding new profiles each week. Stay tuned!</string>

    <!--Home page -> Explore screen-->
    <string name="titleExplore">EXPLORE</string>

    <!--Real Talk details / Real talk tab-->
    <string name="inBriefTitle">In Brief</string>
    <string name="inSightsTitle">INSIGHTS</string>
    <string name="avgSalary">Avg.Salary</string>
    <string name="enoughTo">Enough To:</string>
    <string name="forcastedIndustryGrowth">FORCASTED INDUSTRY GROWTH</string>
    <string name="highSchoolTitle">HIGH SCHOOL</string>
    <string name="afterHighSchoolTitle">AFTER HIGH SCHOOL</string>
    <string name="workTitle">WORK</string>
    <string name="wikiPediaTitle">WIKIPEDIA</string>
    <string name="recommendTalkTitle">RECOMMEND THIS REAL TALK</string>
    <string name="relatedRealTalk">RELATED REAL TALK</string>
    <string name="readMore">Read More</string>

    <!--Real Talk details / Next Steps tab-->
    <string name="recommendedResource">RECOMMENDED RESOURCES</string>

    <!--Profile screen-->
    <string name="bookMarks">BOOKMARKS</string>
    <string name="nextSteps">MY RESOURCES</string>

    <!--Profile screen -> Bookmarks Tab-->
    <string name="yourBookMarksGoHere">YOUR BOOKMARKS GO HERE</string>
    <string name="readLater">READ LATER</string>
    <string name="deleteBookmark">Are you sure you want to delete this bookmark?</string>

    <!--Profile screen -> NextSteps Tab-->
    <string name="yourNextStepsGoHere">YOUR NEXT STEPS GO HERE</string>
    <string name="nextStepsCheckout">CHECK OUT</string>
    <string name="completedNextStep">COMPLETED RESOURCES</string>
    <string name="deleteResources">Are you sure you want to delete this resource?</string>

    <!--Profile screen -> Settings screen-->
    <string name="txtSettings">SETTINGS</string>
    <string name="txtSettingsEmail">Email</string>
    <string name="txtSettingsFacebook">Facebook</string>
    <string name="txtFacebookConnect">Connect</string>
    <string name="txtSettingsAboutUs">About Us</string>
    <string name="txtSettingsInviteFriends">Invite Friends Us</string>
    <string name="txtSettingsPushNotifications">Push Notifications</string>
    <string name="txtSettingsPrivacyPolicy">Privacy Policy</string>
    <string name="txtSettingsTerms">Terms of Use</string>
    <string name="txtSettingsSignOut">Sign Out</string>
    <string name="aboutUsLink">http://www.realtalk.careers/web#/about</string>
    <string name="privacyTermsLink">http://www.realtalk.careers/web#/termsofservice</string>


    <!--Authentication-> First screen (Your account)-->
    <string name="yourAccountBlurb">Create an account to bookmark real talks and save resources to your profile.</string>
    <string name="btnFaceBook">CONNECT WITH FACEBOOK</string>
    <string name="btnSignup">SIGN UP WITH EMAIL</string>
    <string name="txtLogin">LOG IN WITH EMAIL</string>

    <!--Authentication-> Sign up screen-->
    <string name="emailPlaceholder">Email</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="btnDone">DONE</string>
    <string name="termsCondition">By continuing you indicate that you have read and agree to the <u>Terms of Service.</u></string>


    <!--Authentication-> Login screen-->
    <string name="forgotPassword">FORGOT PASSWORD</string>

    <!--Authentication-> Forgot Password screen-->
    <string name="btnSendEmail">SEND EMAIL</string>

    <!--SplashScreen-> 2nd On boarding-->
    <string name="thinker">The impact of a conscious artist is necessary, and it ripples through the world.</string>
    <string name="sporty">When you lose, you get up, you make it better, you try again.</string>
    <string name="socialite">All you need to do to be my friend is like me.</string>
    <string name="organized">You can\'t make a half sandwich. If it\'s not half of a whole sandwich, it\'s just a small sandwich.</string>
    <string name="natureLover">Protecting our future on this planet depends on the conscious evolution of our species.</string>
    <string name="leader">Always aim high, work hard, and care deeply about what you believe in.</string>
    <string name="geek">The biggest risk is not taking any risk.</string>
    <string name="foodie">Real food doesn\'t \'have\' ingredients. Real food is ingredients.</string>
    <string name="explorer">Don\'t be afraid of new arenas.</string>
    <string name="handy">A real driver knows exactly what\'s in his car.</string>
    <string name="creative">I just write what I wanted to write. I write what amuses me.</string>
    <string name="caring">Our prime purpose in life is to help others.</string>
    <string name="bizwiz">I\'m not a Businessman, I\'m a Business, Man.</string>
    <string name="animalLover">I want to wander in the wild.</string>

</resources>
