<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="33dp"
    android:paddingRight="33dp"
    android:background="@color/white"
    tools:context="com.learningpartnership.realtalk.SignUp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:paddingTop="4dp"
        android:clipToPadding="false"
        android:id="@+id/emailWrapper"
        app:hintTextAppearance="@style/floatingLabel">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:id="@+id/txtEmail"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:hint="@string/emailPlaceholder"
            android:background="@drawable/btn_empty_stroke" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="bottom"
        android:paddingTop="4dp"
        android:clipToPadding="false"
        android:layout_marginTop="18dp"
        app:hintTextAppearance="@style/floatingLabel"
        android:id="@+id/passwordWrapper"
        android:layout_below="@+id/emailWrapper">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:singleLine="true"
            android:password="true"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"
            android:hint="@string/passwordPlaceholder"
            android:background="@drawable/btn_empty_stroke" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/passwordWrapper"
        android:layout_marginTop="18dp"
        android:id="@+id/btnDone"
        android:textSize="16.2sp"
        android:enabled="false"
        android:background="@drawable/btn_yellow"
        android:text="@string/btnDone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termsCondition"
        android:layout_below="@+id/btnDone"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/termsConditionColor"
        android:id="@+id/termCondition"
        android:gravity="center" />
</RelativeLayout>
