<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first_screen">

    <LinearLayout
        android:id="@+id/home_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/custom_actionbar"
        android:background="@color/search_background"
        android:focusableInTouchMode="true">

        <AutoCompleteTextView
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/search_text_box"
            android:dropDownHeight="match_parent"
            android:dropDownWidth="wrap_content"
            android:hint="@string/searchBarPlaceHolder"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:popupBackground="@color/search_background"
            android:singleLine="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sub_actionbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/sub_actionbar_bg"
        android:gravity="center">

        <ImageButton
            android:id="@+id/mostLikedIcon"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:background="@android:color/transparent"
            android:src="@drawable/iconmost_liked" />

        <TextView
            android:id="@+id/mostLikedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/mostLikedIcon"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/mostLiked"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/mostBookmarkIcon"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="101dp"
            android:layout_toRightOf="@+id/mostLikedIcon"
            android:background="@android:color/transparent"
            android:src="@drawable/iconmost_bookmarked" />

        <TextView
            android:id="@+id/mostBookmarkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/mostBookmarkIcon"
            android:clickable="true"
            android:text="@string/mostBookmarked"
            android:textColor="@color/black" />
    </RelativeLayout>

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/custom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/action_bar_color">

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:paddingBottom="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/iconprofile" />

        <ImageButton
            android:id="@+id/logo"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/logo"
            android:layout_toRightOf="@+id/logo"
            android:background="@android:color/transparent"
            android:src="@drawable/icondropdown_up" />

        <ImageButton
            android:id="@+id/btnExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/iconcompass" />

    </android.support.v7.widget.Toolbar>


</RelativeLayout>
